--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
+
 <head>
-	<title>Crystals Collector</title>
-	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="assets/game.js"> </script>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
-	<style type="text/css">
-
-</style>
-
+    <title>Crystals Collector</title>
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" href="assets/game.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    </style>
 </head>
+
 <body background="assets/background.jpg">
-	
-	<div id=titlediv>
-		<h1>Crystals Collector<h1>
+    <div id=titlediv>
+        <h1>Crystals Collector<h1>
 	</div>
-	<div id=directions>
+	<div id="directions">
 		<p> You will be given a random number at the start of the game</p>
 		<br>
 		<p>There are four crystals below. By clicking on a crystal you will add a specific amaount of points to your total score.</p>
@@ -30,15 +27,23 @@
 
 	</div>
 	<div id=top>
-		<div id=firsttop></div>
-		<div id=secondtop></div>
+		<div id="firsttop"></div>
+		<div id="secondtop"></div>
 		
 	</div>
 	<div id=crystals>
-	<img src=assets/pic1.png id=gem1>
-	<img src=assets/pic2.png id=gem2>	
-	<img src=assets/pic3.png id=gem3>		
-	<img src=assets/pic4.png id=gem4>	
+		<img src=assets/pic1.png class = "pic" id="gem1">
+		<img src=assets/pic2.png class = "pic" id="gem2">	
+		<img src=assets/pic3.png class = "pic" id="gem3">		
+		<img src=assets/pic4.png class = "pic" id="gem4">	
 	</div>
+	<div id="secondbottom">
+		<h2>Your total score is: <h2>
+	</div>
+	<div id="third">
+
+		
+	</div>
+	
 </body>
 </html>
